[package]
name = "schedule-m8"
version = "0.3.1"
authors = ["'AGhost-7' <'jonathan.boudreau.92@gmail.com'>"]
edition = "2018"

[dependencies]
log = '*'
env_logger = '*'
sled = '*'
priority-queue = '*'
rmp-serde = '*'
hyper = { version = '0.13', features = ['runtime'] }
bytes = '*'
futures = { version = "0.3", features = ["compat"] }

tokio = { version = '0.2.21', features = ['time', 'fs', 'macros', 'test-util'] }
serde_derive = '*'
serde = '*'
serde_json = '*'
chrono = '*'
cron = '*'
uuid = { version = '*', features = ['serde', 'v4'] }

[dev-dependencies]
rand = '*'
